# spotify-player-quickauth

./: .gitattributes  .gitignore  CARGO_README.md  CHANGELOG.md  Cargo.toml  INTEGRATION.md  README.md  run.ps1  run.sh
.cargo/: config.github.toml  config.toml
.github/workflows/: build.yaml  integration.yaml  pages.yaml  test.yaml
.hooks/: link.sh  pre-commit.sh  pre-push.sh
src/: main.rs
