[package]
name = "spotify-quickauth"
version = "0.1.0"
edition = "2021"

[dependencies]
librespot-discovery = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
librespot-core = { git = "https://github.com/librespot-org/librespot", branch = "dev" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0.128"
sha1 = "0.10.6"
hex = "0.4.3"
log = "0.4.22"
hex-literal = "0.4.1"
home = "0.5.9"
env_logger = "0.11.5"
