[package]
name = "spotify-quickauth"
version = "0.1.1"
edition = "2021"
description = "Quickly authenticate librespot-based applications with Spotify"
rust-version = "1.81"
authors = ["Ryan Walters <xevion@xevion.dev>"]
homepage = "https://github.com/Xevion/spotify-quickauth"
repository = "https://github.com/Xevion/spotify-quickauth"
license = "MIT OR Apache-2.0"
readme = "CARGO_README.md"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWR4y+tYx6jem6tVD60RsR/P8fNm+KBT0b4wxTY0a4L/8cN3R85KXyPi"

[dependencies]
librespot-discovery = {  version = "0.4.2" }
librespot-core = { version = "0.4.2" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0.128"
sha1 = "0.10.6"
hex = "0.4.3"
log = "0.4.22"
hex-literal = "0.4.1"
home = "0.5.9"
env_logger = "0.11.5"
